# eml-activations

./: .gitignore  README.md  pyproject.toml
eml_activations/: __init__.py  core.py  tree.py
examples/: mnist_leml.py
experiments/: mnist_results.md  symbolic_regression.py
experiments/results/: mnist_leml.md  symbolic_regression.md
