[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "eml-activations"
version = "0.1.0"
description = "EML (Exp-Minus-Log) operator as PyTorch activation functions — from arXiv:2603.21852"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
